# WeirdText-RESTfull-api

./: Procfile  README.md  config.yml  makefile  manage.py  pyproject.toml  requirements.txt
.circleci/: config.yml
weird_text_api/: asgi.py  settings.py  urls.py  views.py  wsgi.py
weirdtext_lib/: __init__.py  excepions.py  utils.py  weird_text.py
weirdtext_lib/tests/: conftest.py  test_utils.py  test_weirdtext.py
