[tool.poetry]
name = "weirdtext-api"
version = "0.1.0"
description = ""
authors = ["szymos <skoczylas9szymon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.7"
django-rest = "^0.8.7"
djangorestframework = "^3.12.4"
weirdtext-lib = {git = "https://github.com/szymos/WeirdText-lib", rev = "0.1.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-pytest = "^0.2.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
